--- a/public/css/template.css
+++ b/public/css/template.css
@@ -15,8 +15,8 @@ section{
     background: rgba(39, 40, 51, 0.965);
 }
 
-section, div{
-    width: 100%;
+div{
+    width: 80%;
 }
 
 section div{
@@ -35,9 +35,28 @@ input{
 img{
 padding-left: 3rem;
 border-radius: 5px;
-width: 30%;
+width: 40%;
 }
 
 h2{
    margin-right: 2rem;
+}
+
+h3{
+    padding-bottom: 5rem;
+}
+
+
+
+
+
+.ascension{
+    padding: 3rem;
+    width: 80%;
+    overflow: auto;
+}
+
+.cards{
+    padding: 4rem;
+    width: 70%;
 }
